k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: math-worksheet
  namespace: nextjs
  labels:
    app: math-worksheet
spec:
  replicas: 1
  selector:
    matchLabels:
      app: math-worksheet
  template:
    metadata:
      labels:
        app: math-worksheet
    spec:
      containers:
        - name: math-worksheet
          image: ghcr.io/encero/math-worksheet:sha-8c77b07
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              name: http
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
